2012-10-04 Gabor Simon <gabor.simon75@gmail.com>
Placement fixed, CTRL handling fixed, tick feedback added, currency symbols added, clipboard features added

    * src/org/dyndns/fules/ck/*: gap calculation fixed, tick feedback added, clipbrd features added

    * res/xml/default_*.xml: ctrl handling fixed, currency symbols added

2011-07-03 Gabor Simon <gabor.simon@mailbox.hu>
Documentation fixed

    * misc/LayoutFormat.README: description of <Align> tags and long tap global swipes added

    * misc/layout_template.xml: actualised according to default_latin.xml

    * misc/README: removed because it has been moved to the Wiki

2011-07-03 Gabor Simon <gabor.simon@mailbox.hu>
User-configurable key size constraints added, build system improved

    * AndroidManifest.xml: version code incremented

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: maximal key size setting made dynamic

    * src/org/dyndns/fules/ck/CompassKeyboard.java:  maximal key size setting made dynamic,
    instantiation efficiency increased

    * res/values/constants.xml: version incremented to v1.3, key size related labels added

    * res/xml/default_*.xml: key size hints removed

    * res/xml/ck_settings.xml: key size preference added

    * build.properties: comments reindented

    * build.xml: dependency checking of build phases imlemented

2011-06-30 Gabor Simon <gabor.simon@mailbox.hu>
Some code cleanup done

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: code cleanup

    * src/org/dyndns/fules/ck/*.java: indentation fixed

2011-06-28 Gabor Simon <gabor.simon@mailbox.hu>
Touch handling of alignment areas improved

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: margins and Align items now check for global swipes

2011-06-27 Gabor Simon <gabor.simon@mailbox.hu>
Support for alignment started

    * src/org/dyndns/fules/ck/CompassKeyboardView.java: support for margins added, 'Align' tag added
    