@@ -1,3 +1,6 @@
+2012-10-05 Gabor Simon <gabor.simon75@gmail.com>
+Global swipe feedback started
+
 2012-10-04 Gabor Simon <gabor.simon75@gmail.com>
 Placement fixed, CTRL handling fixed, tick feedback added, currency symbols added, clipboard features added
 
